Using VirtualThread in ConnectionThreadExecutorGroup