@@ -23,8 +23,7 @@ import lombok.NoArgsConstructor;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.LinkedBlockingQueue;
-import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
 /**
@@ -61,7 +60,7 @@ public final class ConnectionThreadExecutorGroup {
     }
     
     private ExecutorService newSingleThreadExecutorService(final int connectionId) {
-        return new ThreadPoolExecutor(1, 1, 0L, TimeUnit.MILLISECONDS, new LinkedBlockingQueue<>(), runnable -> new Thread(runnable, String.format("Connection-%d-ThreadExecutor", connectionId)));
+        return Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name("Connection-" + connectionId + "-VirtualThread").factory());
     }
     
     /**
